--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <canvas id="output"></canvas>
     <div class="controls">
         <label for="sim">Simulation</label>
-        <select id="sim">
-            <option value="example1" selected>Example 1</option>
-            <option value="example2">Example 2</option>
-        </select>
+        <select id="sim"></select>
         <div class="buttons">
             <div class="wide-btn">
                 <button id="pauseBtn">Pause</button>
