Evenly sized buttons

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
             <div class="wide-btn">
                 <button id="pauseBtn">Pause</button>
             </div>
-            <button id="resetBtn">Reset</button>
-            <button id="stepBtn">Step</button>
+            <div class="btn-row">
+                <button id="resetBtn">Reset</button>
+                <button id="stepBtn">Step</button>
+            </div>
         </div>
         <span id="timer">0.00s</span>
         <span id="fps">30.0 fps</span>
